--- a/_config.yml
+++ b/_config.yml
@@ -1,23 +1,24 @@
 theme: jekyll-theme-minimal
-## Personal Information
+String: 'Personal Information'
 
-- **Name:** Panagiota
-- **Surname:** Chouliaraki
-- **Father's name:** Georgios
-- **Date of Birth:** 18/02/1999
-- **Personal Adress:** L.Katsoni 14,Maroussi P.C:15122
-- **E-mail:** giottachou@gmail.com
+-Personal Information
+ - **Name:** Panagiota
+ - **Surname:** Chouliaraki
+ - **Father's name:** Georgios
+ - **Date of Birth:** 18/02/1999
+ - **Personal Adress:** L.Katsoni 14,Maroussi P.C:15122
+ - **E-mail:** giottachou@gmail.com
+-
 
-## Studies
+-Studies
+ * High School graduate with a Graduation Score of: 18.6
+ * 2017 –	  :  Ionian University, Department of Informatics
 
-* High School graduate with a Graduation Score of: 18.6
-* 2017 –	  :  Ionian University, Department of Informatics
+-Foreign Languages
 
-## Foreign Languages
-
-#### English:
-1. First Certificate in English, Cambridge (Level B2)
-2. Certificate in Advanced English, Cambridge (Level C1)
-3. Certificate of Proficiency in English, Michigan (Level C2)
-#### German:
-1. Zertifikat B1, Goethe Institut
+ -#### English:
+  1. First Certificate in English, Cambridge (Level B2)
+  2. Certificate in Advanced English, Cambridge (Level C1)
+  3. Certificate of Proficiency in English, Michigan (Level C2)
+ -#### German:
+  1. Zertifikat B1, Goethe Institut
