--- a/_config.yml
+++ b/_config.yml
@@ -11,16 +11,16 @@ String: 'Personal Information'
  - E-mail: giottachou@gmail.com
 -
 ...
-
+---
 -Studies
  * High School graduate with a Graduation Score of: 18.6
  * 2017 –	  :  Ionian University, Department of Informatics
-
+...
+---
 -Foreign Languages
 
- -#### English:
-  1. First Certificate in English, Cambridge (Level B2)
-  2. Certificate in Advanced English, Cambridge (Level C1)
-  3. Certificate of Proficiency in English, Michigan (Level C2)
- -#### German:
-  1. Zertifikat B1, Goethe Institut
+ -English: 1. First Certificate in English, Cambridge (Level B2)
+           2. Certificate in Advanced English, Cambridge (Level C1)
+           3. Certificate of Proficiency in English, Michigan (Level C2)
+ -German:  1. Zertifikat B1, Goethe Institut
+...
