--- a/_config.yml
+++ b/_config.yml
@@ -1,26 +1,54 @@
 theme: jekyll-theme-minimal
-String: 'Personal Information'
 
----
--Personal Information
- - Name: Panagiota
- - Surname: Chouliaraki
- - Father's name: Georgios
- - Date of Birth: 18/02/1999
- - Personal Adress: L.Katsoni 14,Maroussi P.C:15122
- - E-mail: giottachou@gmail.com
--
-...
----
--Studies
- * High School graduate with a Graduation Score of: 18.6
- * 2017 –	  :  Ionian University, Department of Informatics
-...
----
--Foreign Languages
+#---
+#-Personal Information
+# name:
+ # first: Panagiota
+#  last: Chouliaraki
+ #fathersname: Georgios
+# Date of Birth: 18/02/1999
+# Personal Adress: L.Katsoni 14,Maroussi P.C:15122
+# E-mail: giottachou@gmail.com
+#-
+#...
+#---
+#-Studies
+#  -High School graduate with a Graduation Score of: 18.6
+#  -2017 –	  :  Ionian University, Department of Informatics
+#...
+#---
+#-Foreign Languages
 
- -English: 1. First Certificate in English, Cambridge (Level B2)
+# -English: 1. First Certificate in English, Cambridge (Level B2)
+           #2. Certificate in Advanced English, Cambridge (Level C1)
+           #3. Certificate of Proficiency in English, Michigan (Level C2)
+# -German:  1. Zertifikat B1, Goethe Institut
+#...
+
+style: banking # casual, classic, oldstyle, or banking
+color: blue 
+color2: '0.25,0.25,0.25' 
+
+order:
+  - [Personal Information, NONE]
+  - [news, News]
+  - [education, Education]
+
+"Personal Information"
+ Name:
+  first: Panagiota
+  last: Chouliaraki
+ Father's name: Georgios
+ Date of Birth: 18/02/1999
+ Personal Adress: L.Katsoni 14,Maroussi P.C:15122
+ E-mail: giottachou@gmail.com
+
+"Education"
+ "Studies"
+  -High School graduate with a Graduation Score of: 18.6
+  -2017 –	  :  Ionian University, Department of Informatics
+ "Foreign Languages"
+  English: 1. First Certificate in English, Cambridge (Level B2)
            2. Certificate in Advanced English, Cambridge (Level C1)
            3. Certificate of Proficiency in English, Michigan (Level C2)
- -German:  1. Zertifikat B1, Goethe Institut
-...
+  German:  1. Zertifikat B1, Goethe Institut
