--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 theme: jekyll-theme-minimal
-
+title:Panagiota Chouliaraki
 #---
 #-Personal Information
 # name:
@@ -33,7 +33,7 @@ order:
   - [Personal Information, NONE]
   - [education, Education]
 
-"Personal Information"
+title: "Personal Information"
  Name:
   first: Panagiota
   last: Chouliaraki
@@ -42,7 +42,7 @@ order:
  Personal Adress: L.Katsoni 14,Maroussi P.C:15122
  E-mail: giottachou@gmail.com
 
-"Education"
+title: "Education"
  "Studies"
   -High School graduate with a Graduation Score of: 18.6
   -2017 –	  :  Ionian University, Department of Informatics
