Set theme jekyll-theme-time-machine

--- a/_config.yml
+++ b/_config.yml
@@ -51,3 +51,5 @@ title: "Education"
            2. Certificate in Advanced English, Cambridge (Level C1)
            3. Certificate of Proficiency in English, Michigan (Level C2)
   German:  1. Zertifikat B1, Goethe Institut
+
+theme: jekyll-theme-time-machine
