--- a/_config.yml
+++ b/_config.yml
@@ -52,5 +52,22 @@ title: "Education"
            2. Certificate in Advanced English, Cambridge (Level C1)
            3. Certificate of Proficiency in English, Michigan (Level C2)
   German:  1. Zertifikat B1, Goethe Institut
+  
+  title: "Informatics knowledge"
+    Use of Microsoft Word and Powerpoint
+    Use of Adobe Photoshop and Dreamweaver
+    Use of Wordpress for site construction
+    Programming languages: C, C++,Java,Python,Perl,SQL,HTML,PHP,CSS
+ title: "Seminaries"
+01/12/18: Prticipation in “MLH Local Hack Day 2018”
+29/01/19: “Post-Quantum Cryptography, Transparent Lotteries and Zero Knowledge Proofs”
+05/02/19: “Safety on Internet”
+19/02/19: “Gender Gap in IT”
+title: "Volunteering Activities"
+Volunteering work as a Robotics teacher assistant for teaching robotics to kids(1st to 6th grade)
+title: "Hobbies"
+Cooking
+Piano/Painting
+Aerial Dance/Yoga
 
 theme: jekyll-theme-time-machine
